--- a/index.html
+++ b/index.html
@@ -66,14 +66,13 @@
   <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
   <script>
 const firebaseConfig = {
-  apiKey: "AIzaSyAR74Twa556NSfp7WGBfewZW3QNcdVuqvE",
-  authDomain: "arabfmaous.firebaseapp.com",
-  databaseURL: "https://arabfmaous-default-rtdb.firebaseio.com",
-  projectId: "arabfmaous",
-  storageBucket: "arabfmaous.appspot.com",
-  messagingSenderId: "67370852932",
-  appId: "1:67370852932:web:1d8f50efac8421850dd211",
-  measurementId: "G-TEGMLXLC02"
+  apiKey: "AIzaSyB02u7PYiIlYeBPXfn5loEbvAZr73cHOc4",
+  authDomain: "glamasiadb.firebaseapp.com",
+  databaseURL: "https://glamasiadb-default-rtdb.firebaseio.com",
+  projectId: "glamasiadb",
+  storageBucket: "glamasiadb.appspot.com",
+  messagingSenderId: "8104372885",
+  appId: "1:8104372885:web:8de326d83c846eb5c9499c"
 };
     firebase.initializeApp(firebaseConfig);
     async function signInAnonymously() {
